Fix hero overflow

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -69,7 +69,7 @@
 
 @include media-breakpoint-up(xl) {
   .hero {
-    height: 30vw;
+    min-height: 30vw;
 
     &-image {
       background-size: 100%;
